--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@testing-library/react-hooks": "^8.0.0",
     "babel-loader": "^8.0.5",
     "node-sass": "npm:sass@^1.49.7",
+    "prop-types": "^15.8.1",
     "react-test-renderer": "^16.14.0"
   },
   "jest": {
